--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <header>
         <div class="container">
             <img src="path-to-your-photo.jpg" alt="Jasmer Singh Sanjotra" class="profile-pic">
@@ -19,56 +29,6 @@
         <div class="container">
             <h2>About Me</h2>
             <p>I am a second-year B.Tech student at IIT Indore, specializing in Electrical Engineering. I have a deep interest in competitive programming, machine learning, and quantum computing. I maintain repositories with solutions to popular competitive programming sheets and roadmaps, which I update regularly.</p>
-        </div>
-    </section>
-
-    <section id="interests">
-        <div class="container">
-            <h2>Interests</h2>
-            <ul>
-                <li>Competitive programming</li>
-                <li>Linux enthusiast (Arch user)</li>
-                <li>Enjoy taking walks and spending time in fresh air</li>
-                <li>Love visiting museums</li>
-                <li>Aviation enthusiast (Grade 3 pilot on Infinite Flight)</li>
-                <li>Tech geek</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="education">
-        <div class="container">
-            <h2>Education</h2>
-            <ul>
-                <li>B.Tech in Electrical Engineering, IIT Indore, CGPA: 8.68/10 (2022-2026)</li>
-                <li>Senior Secondary, Delhi Public School, Pune, 94.6% (2022)</li>
-                <li>Secondary, Delhi Public School, Pune, 95.34% (2020)</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="skills">
-        <div class="container">
-            <h2>Skills</h2>
-            <ul>
-                <li>Programming: C++, Python, VB.net</li>
-                <li>Tools/Frameworks: HTML, CSS, Pennylane, Git, GitHub, MATLAB/Simulink, CAD using Autodesk Fusion 360</li>
-                <li>Operating Systems: Windows, Ubuntu, Debian, Arch-based distros</li>
-                <li>Coursera Certifications: Keras Functional API and Custom Loss Functions, Neural Networks and Deep Learning, Supervised Machine Learning: Regression and Classification, Foundations of Project Management</li>
-                <li>Competitive Programming: Specialist on Codeforces, experience with various data structures and algorithms</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="container">
-            <h2>Get in Touch</h2>
-            <p>I am open to project and research collaborations. Feel free to reach out to me!</p>
-            <ul>
-                <li>Email: <a href="mailto:jasmer.sanjotra@gmail.com">jasmer.sanjotra@gmail.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/jasmer-singh-sanjotra-a05b95250/">linkedin.com/in/jasmer-singh-sanjotra-a05b95250/</a></li>
-                <li>GitHub: <a href="https://github.com/your-github-username">github.com/your-github-username</a></li>
-            </ul>
         </div>
     </section>
 </body>
