--- a/index.html
+++ b/index.html
@@ -210,17 +210,14 @@
         <section class="about-text">
           <p>
             Hello/Hallo/Hola/Bonjour! I’m Jasmer Singh Sanjotra, currently pursuing a B.Tech in Electrical Engineering at the Indian Institute of Technology Indore. I have a strong academic foundation complemented by hands-on experience in machine learning and medical imaging.
-            My journey in research and development includes internships with esteemed institutions such as Northwestern University and IIT Indore, where I worked on advanced deep learning models for liver tumor segmentation and audio-visual speech enhancement. I’ve co-authored multiple research papers.
-            I'm also fond of Competitive Programming, pursuing it as a hooby. I hold an Expert rating on Codeforces and actively contribute to the Competitive Programming Division at The Programming Club. My technical skills span across C++, Python, TensorFlow and PyTorch.
-            Feel free to connect with me to explore more about my projects and research. I’m always open to discussing innovative ideas and collaborations.
+            My journey in research and development includes internships with esteemed institutions such as Northwestern University and IIT Indore, where I worked on advanced deep learning models for liver tumor segmentation and audio-visual speech enhancement. 
+            I’ve co-authored multiple research papers in the same domain.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            I'm also fond of Competitive Programming, and I pursue it as a hobby. I go by the handle <a href="https://codeforces.com/profile/von_Braun">von_Braun</a> on codeforces(yes, named after the father of the Saturn V rocket, big inspiration for me(not that Im into space tech, but I've always been fascinated by the idea of space exploration and exploring the "unknown")).  and actively contribute to the Competitive Programming Division at The Programming Club. My technical skills span across C++, Python, TensorFlow and PyTorch.
+            Feel free to connect with me to explore more about my projects and research. I’m always open to discussing innovative ideas and collaborations.
+
           </p>
         </section>
 
